--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "中国省市区数据源以及转换为一维数组算法（可扩展）",
   "main": "dist/china-area-array.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "convert": "node src/convert.js"
   },
   "repository": {
     "type": "git",
